--- a/html/home.html
+++ b/html/home.html
@@ -5,12 +5,11 @@
     <head>
         <meta charset="UTF-8">
         <title>HTML + CSS learning page</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
     <div class="container">
-
     <nav>
       <ul>
         <li><a>Site Logo</a></li>
@@ -43,14 +42,12 @@
     <main>
         <div style="text-align:center;">
           <section>
-            <h1>Utopia Running Solutions Oy</h1>
-            <article>
+            <header><h1>Utopia Running Solutions Oy</h1></header>
               <h2>Suomalaista juoksuvalmennusta. Kokemuksella.</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
                   dolor in labore possimus sint. Alias error iure placeat? Commodi debitis earum magni nostrum
                   possimus? Consequatur, fuga, soluta!</p>
 
-            </article>
           </section>
         </div>
 
