--- a/html/products.html
+++ b/html/products.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
+<html lang="en">
 <div class="products">
-    <html lang="en">
     <head>
         <meta charset="UTF-8">
         <title>HTML + CSS learning page</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
-      <h4>Valmennuspaketit</h4>
-          <p>Valikoimaamme kuuluu kolme erilaista valmennuspaketia:</p>
-          <ul>
-            <li>Product 1</li>
-            <li>Product 2</li>
-            <li>Product 3</li>
-          </ul>
-    <div class="container">
+      <h4>Products</h4>
+      <div class="kuva-container">
+          <img src="/images/products.jpg" alt="Products">
+      </div>
+          <p>We have three different training programs. Each training program is made <br>according to your personal
+              requirements and levels. You will have your own <br>personal trainer at your disposal who is available for you
+          10 hours a day, <br>and he/she will renew your plan every three weeks.</p>
+      <div class="productscontainer">
+          <div class="product1">
+            <div class="product-box">
+              <h5>Product 1</h5>
+              <img src="https://via.placeholder.com/300x300" alt="Product 1">
+              <figcaption style="color:#888888;"><i>Product 1</i></figcaption>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
+                  dolor in labore possimus sint. Alias error iure placeat?</p>
+              <button>Buy this</button>
+            </div>
+          </div>
 
-        <nav>
-          <ul>
-            <li><a>Site Logo</a></li>
-            <li class="right"><a href="../html/contact.html">Contact</a></li>
-            <li class="right"><a href="../html/products.html">Products</a></li>
-            <li class="right"><a href="../html/home.html">Home</a></li>
-          </ul>
-        </nav>
+          <div class="product2">
+            <div class="product-box">
+              <h5>Product 2</h5><img src="https://via.placeholder.com/300x300" alt="Product 2">
+              <figcaption style="color:#888888;"><i>Product 2</i></figcaption>
 
-        <footer>
-            <h4>Subscribe to our newsletter</h4>
-            <form action="#">
-                <input type="email" name="email" placeholder="Your email address">
-                <input type="submit" value="Send">
-            </form>
-        </footer>
-    </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
+                  dolor in labore possimus sint. Alias error iure placeat?</p>
+              <button>Buy this</button>
+            </div>
+          </div>
+
+          <div class="product3">
+            <div class="product-box">
+              <h5>Product 3</h5>
+              <img src="https://via.placeholder.com/300x300" alt="Product 3">
+              <figcaption style="color:#888888;"><i>Product 3</i></figcaption>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
+                  dolor in labore possimus sint. Alias error iure placeat?</p>
+              <button>Buy this</button>
+            </div>
+          </div>
+      </div>
+
+
+
+    <nav>
+      <ul>
+        <li><a>Site Logo</a></li>
+        <li class="right"><a href="../html/contact.html">Contact</a></li>
+        <li class="right"><a href="../html/products.html">Products</a></li>
+        <li class="right"><a href="../html/home.html">Home</a></li>
+      </ul>
+    </nav>
+
 
     </body>
-    </html>
 </div>
+</html>
