Siistitty syntaksi ja muutama parannus

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="contact">
     <head>
         <meta charset="UTF-8">
         <title>HTML + CSS learning page</title>
@@ -8,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
+    <div class="contact">
     <nav>
       <ul>
         <li><a>Site Logo</a></li>
@@ -38,6 +38,7 @@
     </footer>
 
     <div class="info">
+      <h6>Contact us</h6>
       <table>
         <tr>
             <td><b>Visit us at:</b></td>
@@ -65,8 +66,7 @@
           </tr>
       </table>
     </div>
-      <img src="/images/map.jpg" alt="Map" class="map-image">
-
+      <img src="../css/map.jpg" alt="Map" class="map-image">
+    </div>
     </body>
-</div>
 </html>
