--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<div class="home">
     <head>
         <meta charset="UTF-8">
         <title>HTML + CSS learning page</title>
@@ -8,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body>
+    <div class="home">
     <nav>
       <ul>
         <li><a>Site Logo</a></li>
@@ -37,20 +37,15 @@
     </footer>
 
     <main>
-        <div style="text-align:center;">
-          <section>
-            <header><h1>Utopia Running Solutions Oy</h1></header>
-              <h2>Suomalaista juoksuvalmennusta. Kokemuksella.</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
-                  dolor in labore possimus sint. Alias error iure placeat? Commodi debitis earum magni nostrum
-                  possimus? Consequatur, fuga, soluta!</p>
+      <section>
+        <header><h1>Utopia Running Solutions Oy</h1>
+          <h2>Suomalaista juoksuvalmennusta. Kokemuksella.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
+              dolor in labore possimus sint. Alias error iure placeat? Commodi debitis earum magni nostrum
+              possimus? Consequatur, fuga, soluta!</p></header>
 
-          </section>
-        </div>
-
+      </section>
     </main>
-
-
+    </div>
     </body>
-</div>
 </html>
