--- a/html/contact.html
+++ b/html/contact.html
@@ -66,7 +66,7 @@
           </tr>
       </table>
     </div>
-      <img src="../css/map.jpg" alt="Map" class="map-image">
+      <img src="../img/map.jpg" alt="Map" class="map-image">
     </div>
     </body>
 </html>
