--- a/html/products.html
+++ b/html/products.html
@@ -18,7 +18,7 @@
     </nav>
       <h4>Products</h4>
       <div class="kuva-container">
-          <img src="../css/products.jpg" alt="Products">
+          <img src="../img/products.jpg" alt="Products">
       </div>
           <p style="margin-left: 2rem;">We have three different training programs. Each training program is made <br>according to your personal
               requirements and levels. You will have your own <br>personal trainer at your disposal who is available for you
