Products värikoodi poistettu kuvatekstistä

--- a/html/products.html
+++ b/html/products.html
@@ -28,7 +28,7 @@
             <div class="product-box">
               <h5>Product 1</h5>
               <img src="https://via.placeholder.com/300x300" alt="Product 1">
-              <i style="color:#888888;">Product 1</i>
+              <i>Product 1</i>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
                   dolor in labore possimus sint. Alias error iure placeat?</p>
               <button>Buy this</button>
@@ -38,7 +38,7 @@
           <div class="product2">
             <div class="product-box">
               <h5>Product 2</h5><img src="https://via.placeholder.com/300x300" alt="Product 2">
-              <i style="color:#888888;">Product 2</i>
+              <i>Product 2</i>
 
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
                   dolor in labore possimus sint. Alias error iure placeat?</p>
@@ -50,7 +50,7 @@
             <div class="product-box">
               <h5>Product 3</h5>
               <img src="https://via.placeholder.com/300x300" alt="Product 3">
-              <i style="color:#888888;">Product 3</i>
+              <i>Product 3</i>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur assumenda corporis deleniti
                   dolor in labore possimus sint. Alias error iure placeat?</p>
               <button>Buy this</button>
