Testit läpi ja testitulokset lisätty

--- a/html/results.html
+++ b/html/results.html
@@ -2,9 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Results</title>
 </head>
 <body>
+<h2>Font</h2>
+<p>Font is from <a href="https://fonts.google.com/specimen/Inter?category=Sans+Serif">Google Fonts. Name: Inter</a></p>
+<pre>
+    @font-face {
+        font-family: Inter;
+        src: url("Inter-Regular.ttf") format("truetype");
+    }
+
+    body {
+       font-family: Inter, sans-serif;
+    }
+</pre>
+
+<p style="font-size:20px;margin-top: 4rem;margin-left: 2rem;"> !!! Attention !!! I have created HTML codes in three different HTML files (file per page), <br>so validations/contrast checks and Lighthouse
+    audits were performed separately for each page. <br>Pictures below:</p>
+<h2>Validation Home</h2>
+<p>
+    <img src="../img/validator-home.png" alt="valid home">
+</p>
+
+<h2>Validation Products</h2>
+<p>
+    <img src="../img/validator-products.png" alt="valid products">
+</p>
+
+<h2>Validation Contact</h2>
+<p>
+    <img src="../img/validator-contact.png" alt="valid contact">
+</p>
+
+<h2>Lighthouse Home</h2>
+<p>
+    <img src="../img/lighthouse-home.png" alt="lighthouse home">
+</p>
+
+<h2>Lighthouse Products</h2>
+<p>
+    <img src="../img/lighthouse-products.png" alt="lighthouse products">
+</p>
+
+<h2>Lighthouse Contact</h2>
+<p>
+    <img src="../img/lighthouse-contact.png" alt="lighthouse contact">
+</p>
+
+<h2>Contrast Home</h2>
+<p>
+    <img src="../img/contrast-home.png" alt="contrast home">
+</p>
+
+<h2>Contrast Products</h2>
+<p>
+    <img src="../img/contrast-products.png" alt="contrast products">
+</p>
+
+<h2>Contrast Contact</h2>
+<p>
+    <img src="../img/contrast-contact.png" alt="contrast contact">
+</p>
 
 </body>
 </html>
